[project]
name = "intelowl"
version = "6.5.1"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Django core
    "Django==4.2.29",
    "psycopg2-binary==2.9.6",
    "django-auth-ldap==5.1.0",
    "django-radius==1.5.0",
    "django-filter==25.1",
    "django-storages==1.14",
    "django-celery-beat==2.7.0",
    "django-celery-results==2.5.0",
    "django-ses==4.6.0",
    "django-iam-dbauth==0.2.1",
    "django-prettyjson==0.4.1",
    "django-silk==5.4.3",
    "django-treebeard==4.7",
    "django-solo==2.4.0",
    "django_extensions==3.2.3",
    "django-watchfiles==1.4.0",
    "jsonschema==4.25.1",

    # Django Rest Framework
    "Authlib==1.6.9",
    "djangorestframework==3.15.2",
    "djangorestframework-filters==1.0.0.dev2",
    "drf-spectacular==0.28.0",
    "django-rest-email-auth==4.0.0",

    # Infrastructure
    "boto3==1.39.4",
    "celery[sqs,redis]==5.4.0",
    "dataclasses==0.6",
    "flower==2.0.0",
    "uWSGI==2.0.28",
    "uwsgitop==0.12",
    "whitenoise==6.9.0",
    "daphne==4.2.1",
    "channels==4.1.0",
    "channels-redis==4.2.0",
    "elasticsearch-dsl==8.17.0",

    # Plugins & OSINT Tools
    "GitPython==3.1.46",
    "checkdmarc==5.14.1",
    "dnspython==2.8.0",
    "dnstwist[full]==20250130",
    "google>=3.0.0",
    "google-cloud-webrisk==1.20.0",
    "intezer-sdk==1.24.0",
    "lief==0.15.1",
    "maxminddb==2.6.0",
    "geoip2==4.8.0",
    "mwdblib==4.6.0",
    "oletools==0.60.2",
    "OTXv2==1.5.12",
    "peepdf-fork==0.4.3",
    "pdfid==1.1.0",
    "pefile==2024.8.26",
    "Pillow==12.1.1",
    "pydeep==0.4",
    "pyelftools==0.31",
    "PyExifTool==0.5.0",
    "pyhashlookup==1.2.0",
    "pyimpfuzzy==0.5",
    "pymisp==2.5.0",
    "pyOneNote==0.0.2",
    "pypdns==2.2.1",
    "pypssl==2.2",
    "pysafebrowsing==0.1.1",
    "PySocks==1.7.1",
    "py-tlsh==4.7.2",
    "quark-engine==25.1.1",
    "speakeasy-emulator==1.5.9",
    "telfhash==0.9.8",
    "yara-python==4.5.1",
    "yara-x==1.10.0",
    "greynoise==2.3.0",
    "XLMMacroDeobfuscator[secure]==0.2.3",
    "thinkst-zippy==0.1.2",
    "querycontacts==2.0.0",
    "hfinger==0.2.2",
    "blint==2.3.2",
    "permhash==0.1.4",
    "ail_typo_squatting==2.7.4",
    "iocextract==1.16.1",
    "ioc-finder==7.0.0",
    "polyswarm-api==3.16.0",
    "knock-subdomains==8.0.0",
    "dotnetfile==0.2.4",
    "docxpy==0.8.5",
    "pylnk3==0.4.2",
    "androguard==3.4.0a1",
    "wad==0.4.6",
    "debloat==1.6.4",
    "phonenumbers==9.0.3",
    "die-python==0.4.0",
    "jbxapi==3.23.0",
    "flare-floss==3.1.1",
    "flare-capa==9.3.1",
    "machofile==2026.2.4",
    "httpx[http2]==0.28.1",
    "pyxlsb2==0.0.8",
    "xlrd2==1.3.4",
    "defusedxml==0.7.1",
    "pyzipper==0.3.6",
    "dateparser==1.2.0",
    "DeepDiff>=8.7.0",
    "lxml==6.0.2",
    "Faker==36.1.0",
    "beautifulsoup4==4.14.2",
    "certego-saas==0.7.12",
    "pycti==6.8.8",
]

[dependency-groups]
dev = [
    "pre-commit==4.0.1",
    "coverage==7.6.1",
]
lint = [
    "ruff==0.14.10",
]
watchman = [
    "pywatchman==2.0.0",
]

[tool.uv]
prerelease = "allow"
override-dependencies = [
    "markdown>=3.4.0",
    "future>=0.18.3",
    "pyasn1>=0.6.1",
    "lief>=0.17.2",
    "starlette>=0.49.1",
    "unicorn>=2.0.1",
    "untangle>=1.2.1",
]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[tool.ruff]
line-length = 110
target-version = "py311"

exclude = [
    "venv",
    "frontend",
    "node_modules",
    "migrations",
    "docs",
    "virtualenv",
    "configuration/ldap_config.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "DJ",  # flake8-django
]

ignore = [
    "E231",  # missing whitespace after ','
    "E501",  # line too long - handled by formatter, remaining are strings/comments
    "W605",  # invalid escape sequence
    "UP006", # Use `list` instead of `List` for type annotation
    "UP035", # deprecated imports from typing module
    "UP007", # Use `X | Y` for type annotations instead of Optional/Union (defer to follow-up)
    "UP010", # Unnecessary `from __future__ import` (defer to follow-up)
    "UP015", # Unnecessary mode argument in open() (defer to follow-up)
    "UP017", # Use `datetime.UTC` alias (defer to follow-up)
    "UP032", # Use f-string instead of format() (defer to follow-up)
    "UP034", # Extraneous parentheses (defer to follow-up)
    "UP037", # Remove quotes from type annotation (defer to follow-up)
    "UP041", # Replace aliased errors with TimeoutError (defer to follow-up)
    "UP045", # Use `X | None` instead of Optional[X] (defer to follow-up)
    "C403",  # Unnecessary list comprehension - set (defer to follow-up)
    "C408",  # Unnecessary dict() call (defer to follow-up)
    "C417",  # Unnecessary map() usage (defer to follow-up)
    "C420",  # Unnecessary dict comprehension (defer to follow-up)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__ files
"api_app/decorators.py" = ["N801"]  # classproperty names are intentionally lowercase
"api_app/models.py" = ["DJ012", "DJ001", "DJ008"]
"api_app/analyzables_manager/models.py" = ["DJ001"]
"api_app/analyzers_manager/models.py" = ["DJ008"]
"api_app/visualizers_manager/models.py" = ["DJ008", "DJ001"]
"authentication/models.py" = ["DJ008"]
"api_app/data_model_manager/models.py" = ["DJ008", "DJ012"]
"api_app/user_events_manager/**" = ["DJ012", "DJ001", "DJ008"]

[tool.ruff.lint.isort]
known-first-party = ["certego_saas"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.codereviewdoctor]
disable = ["missing-reverse-migration"]
