[project]
name = "intelowl"
version = "6.5.1"
requires-python = ">=3.11"
dependencies = [
    # django libs
    "Django==4.2.29",
    "psycopg2-binary==2.9.6",
    "django-auth-ldap==5.1.0",
    "django-radius==1.5.0",
    "django-filter==25.1",
    "django-storages==1.14",
    "django-celery-beat==2.7.0",
    "django-celery-results==2.5.0",
    "django-ses==4.6.0",
    "django-iam-dbauth==0.2.1",
    "django-timezone-field==7.2.1",
    "django-solo==2.4.0",
    "django-prettyjson==0.4.1",
    "django-treebeard==4.7",
    "django-extensions==3.2.3",
    "django-email-utils==1.0.0",
    "django-rest-email-auth==4.0.0",
    "django-silk==5.4.3",
    "djangorestframework==3.15.2",
    "djangorestframework-filters==1.0.0.dev2",
    "django-user-agents==0.4.0",
    "channels==4.1.0",
    "channels-redis==4.2.0",
    "daphne==4.2.1",
    # main libs
    "celery[redis, sqs]==5.4.0",
    "elasticsearch==8.19.3",
    "elasticsearch-dsl==8.17.0",
    "flower==2.0.0",
    "requests==2.33.1",
    "aiohttp==3.13.5",
    "boto3==1.39.4",
    "cryptography==46.0.6",
    "python-magic==0.4.27",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "ujson==5.12.0",
    "orjson==3.11.8",
    "msgpack==1.1.2",
    "msgspec==0.20.0",
    "jinja2==3.1.6",
    "beautifulsoup4==4.14.2",
    "lxml==6.0.2",
    "numpy==2.4.4",
    "pillow==11.0.0",
    "tqdm==4.67.3",
    "rich==13.9.4",
    "click==8.3.1",
    # security libs
    "yara-python==4.5.1",
    "yara-x==1.10.0",
    "pefile==2024.8.26",
    "olefile==0.47",
    "oletools==0.60.2",
    "lief==0.15.1",
    "capstone==5.0.7",
    "unicorn==1.0.2",
    "androguard==3.4.0a1",
    "quark-engine==25.1.1",
    "speakeasy-emulator==1.5.9",
    "flare-capa==9.3.1",
    "flare-floss==3.1.1",
    "pydeep==0.4",
    "pyimpfuzzy==0.5",
    "pywatchman==2.0.0",
    "uwsgi==2.0.28",
    "uwsgitop==0.12",
    "python-ldap==3.4.5",
    "authlib==1.6.9",
    "mwdblib==4.6.0",
    "intezer-sdk==1.24.0",
    "geoip2==4.8.0",
    "maxminddb==2.6.0",
    "OTXv2==1.5.12",
    "greynoise==2.3.0",
    "dnstwist[full]==20250130",
    "google>=3.0.0",
    "google-cloud-webrisk==1.20.0",
    "jbxapi==3.23.0",
    "ail-typo-squatting==2.7.4",
    "blint==2.3.2",
    "checkdmarc==5.13.1",
    "docxpy==0.8.5",
    "dotnetfile==0.2.4",
    "drf-spectacular==0.28.0",
    "faker==36.1.0",
    "gitpython==3.1.41",
    "hfinger==0.2.2",
    "ioc-finder==7.0.0",
    "iocextract==1.16.1",
    "knock-subdomains==8.0.0",
    "pdfid==1.1.0",
    "peepdf-fork==0.4.3",
    "permhash==0.1.4",
    "phonenumbers==9.0.3",
    "polyswarm-api==3.16.0",
    "pyexiftool==0.5.0",
    "pyhashlookup==1.2.0",
    "pylnk3==0.4.2",
    "pymisp==2.5.0",
    "pyonenote==0.0.2",
    "pypdns==2.2.1",
    "pypssl==2.2",
    "pysafebrowsing==0.1.1",
    "pysocks==1.7.1",
    "querycontacts==2.0.0",
    "telfhash==0.9.8",
    "thinkst-zippy==0.1.2",
    "wad==0.4.6",
    "whitenoise==6.9.0",
    "xlmmacrodeobfuscator==0.2.3",
    "dateparser==1.2.0",
    "debloat==1.6.4",
    "deepdiff==8.6.1",
]

[dependency-groups]
dev = [
    "ruff==0.14.10",
    "pre-commit==4.0.1",
    "coverage==7.6.1",
    "pytest==8.3.4",
]
certego = [
    "certego-saas==0.7.11",
    "django-cache-memoize==0.2.1",
    "django-ipware==7.0.1",
    "django-rest-durin==1.0.0",
    "drf-flex-fields==1.0.2",
    "drf-recaptcha==4.0.3",
    "markdown==3.3.7",
    "oauthlib==3.3.1",
    "python-ipware==3.0.0",
    "python-twitter==3.5",
    "requests-oauthlib==2.0.0",
    "slack-sdk==3.41.0",
    "stripe==15.0.1",
    "ua-parser==1.0.1",
    "ua-parser-builtins==202603",
    "user-agents==2.2.0",
]

[tool.uv]
managed = true

[tool.ruff]
line-length = 110
target-version = "py311"

exclude = [
    "venv",
    "frontend",
    "node_modules",
    "migrations",
    "docs",
    "virtualenv",
    "configuration/ldap_config.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "DJ",  # flake8-django
]

ignore = [
    "E231",  # missing whitespace after ','
    "E501",  # line too long - handled by formatter, remaining are strings/comments
    "W605",  # invalid escape sequence
    "UP006", # Use `list` instead of `List` for type annotation
    "UP035", # deprecated imports from typing module
    "UP007", # Use `X | Y` for type annotations instead of Optional/Union (defer to follow-up)
    "UP010", # Unnecessary `from __future__ import` (defer to follow-up)
    "UP015", # Unnecessary mode argument in open() (defer to follow-up)
    "UP017", # Use `datetime.UTC` alias (defer to follow-up)
    "UP032", # Use f-string instead of format() (defer to follow-up)
    "UP034", # Extraneous parentheses (defer to follow-up)
    "UP037", # Remove quotes from type annotation (defer to follow-up)
    "UP041", # Replace aliased errors with TimeoutError (defer to follow-up)
    "UP045", # Use `X | None` instead of Optional[X] (defer to follow-up)
    "C403",  # Unnecessary list comprehension - set (defer to follow-up)
    "C408",  # Unnecessary dict() call (defer to follow-up)
    "C417",  # Unnecessary map() usage (defer to follow-up)
    "C420",  # Unnecessary dict comprehension (defer to follow-up)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__ files
"api_app/decorators.py" = ["N801"]  # classproperty names are intentionally lowercase
"api_app/models.py" = ["DJ012", "DJ001", "DJ008"]
"api_app/analyzables_manager/models.py" = ["DJ001"]
"api_app/analyzers_manager/models.py" = ["DJ008"]
"api_app/visualizers_manager/models.py" = ["DJ008", "DJ001"]
"authentication/models.py" = ["DJ008"]
"api_app/data_model_manager/models.py" = ["DJ008", "DJ012"]
"api_app/user_events_manager/**" = ["DJ012", "DJ001", "DJ008"]

[tool.ruff.lint.isort]
known-first-party = ["certego_saas"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.codereviewdoctor]
disable = ["missing-reverse-migration"]
